--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "numpy==2.2.6",
     "openai==1.86.0",
     "plotly==6.2.0",
+    "rapidfuzz==3.13.0",
     "scikit-learn==1.6.1",
     "seaborn>=0.13.2",
     "text_chunker==0.2.2",
@@ -35,9 +36,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0",
     "black>=22.0",
-    "flake8>=4.0",
     "ipykernel>=6.0",
 ]
 demo = [
