Add Streamlit logging options

--- a/demo/.streamlit/config.toml
+++ b/demo/.streamlit/config.toml
@@ -7,3 +7,7 @@ toolbarMode = "minimal"
 
 [ui]
 hideTopBar = true
+
+[logger]
+# Level of logging: "error", "warning", "info", or "debug"
+level = "error"
