run actions from staging-before-public

--- a/.github/workflows/main_highlight-summarize.yml
+++ b/.github/workflows/main_highlight-summarize.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - highlight-summarize
 on:
   push:
     branches:
-      - main
+      - staging-before-public
   workflow_dispatch:
 
 jobs:
