--- a/.github/workflows/main_highlight-summarize.yml
+++ b/.github/workflows/main_highlight-summarize.yml
@@ -29,13 +29,16 @@ jobs:
           python -m venv venv
           source venv/bin/activate
       
-      - name: Point to the right dependencies file
-        run: cp demo-requirements.txt requirements.txt
+      #- name: Point to the right dependencies file
+      #  run: cp demo/requirements.txt requirements.txt
+
+      - name: "pip install"
+        run: pip install .[demo]
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip demo/* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
