Deploys from main

--- a/.github/workflows/main_highlight-summarize.yml
+++ b/.github/workflows/main_highlight-summarize.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - highlight-summarize
 on:
   push:
     branches:
-      - staging-before-public
+      - main
   workflow_dispatch:
 
 jobs:
