Switch results from CSV to Parquet format (LFS tracked)

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-reproduce/results/**/*.csv filter=lfs diff=lfs merge=lfs -text
 reproduce/results/**/*.jsonl filter=lfs diff=lfs merge=lfs -text
+reproduce/results/**/*.parquet filter=lfs diff=lfs merge=lfs -text
